--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -14,7 +14,11 @@ const {
 <div class="md:gap-xs">
   {
     image !== "false" && (
-      <img src={image} alt={descr} class="pb-lg pt-3xl md:pt-0" />
+      <img
+        src={image}
+        alt={descr}
+        class="pb-lg pt-3xl w-2/3 md:w-100 md:pt-0"
+      />
     )
   }
   {
