endnu flere rettelser

--- a/src/pages/historien.astro
+++ b/src/pages/historien.astro
@@ -15,7 +15,7 @@ import Heading from "../components/Heading.astro";
 
     <div class="grid md:grid-cols-3">
       <img
-        src="sexelancen.webp"
+        src="/sexelancen.webp"
         alt="Billede af sexelancen"
         class="pb-3xl md:col-start-2 md:col-end-4"
       />
@@ -50,7 +50,7 @@ import Heading from "../components/Heading.astro";
 
     <div class="grid md:grid-cols-3">
       <img
-        src="foredrag.webp"
+        src="/foredrag.webp"
         alt="Billeder fra et foredrag"
         class="py-3xl md:col-start-2 md:col-end-4"
       />
