--- a/src/pages/vores-arbejde.astro
+++ b/src/pages/vores-arbejde.astro
@@ -15,7 +15,7 @@ import Text from "../components/Text.astro";
     />
     <div class="grid md:grid-cols-3">
       <img
-        src="vores-arbejde-hero.webp"
+        src="/vores-arbejde-hero.webp"
         alt="Billede af kvinde i the red van"
         class="pb-3xl md:col-start-2 md:col-end-4"
       />
@@ -41,7 +41,7 @@ import Text from "../components/Text.astro";
     </TextParagraf>
     <div class="grid md:grid-cols-6">
       <img
-        src="vores-arbejde-body.webp"
+        src="/vores-arbejde-body.webp"
         alt="Billede af frivillig som rengører the red van"
         class="pt-3xl md:col-start-3 md:col-end-6"
       />
