laver formular på frivillig

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,10 +7,10 @@ import Text from "../components/Text.astro";
   class="bg-bordeaux grid md:grid-cols-3 md:grid-rows-3 px-gutter py-3xl md:px-2xl md:py-4xl gap-2xl"
 >
   <div class="md:col-start-2 md:col-end-3">
-    <Heading htmlheading="h2" size="small" stylingclasses="uppercase text-hf">
+    <Heading htmlheading="h2" size="small" stylingclasses="uppercase text-hf ">
       Organisation
     </Heading>
-    <Text teksttype="base" stylingclasses="text-hf">
+    <Text teksttype="base" stylingclasses="text-hf underline">
       Vedtægter <br />Regnskaber <br />Privatliv & cookies
     </Text>
   </div>
@@ -33,6 +33,6 @@ import Text from "../components/Text.astro";
     </Text>
   </div>
   <div class="md:col-start-1 md:col-end-2 md:row-start-3 md:row-end-4">
-    <img src="logo-footer.png" alt="The red vans logo" />
+    <img src="/logo-footer.png" alt="The red vans logo" />
   </div>
 </section>
