--- a/src/components/Stoetform.astro
+++ b/src/components/Stoetform.astro
@@ -126,7 +126,7 @@ import Button from "./Button.astro";
     <!-- NÆSTE TRIN KNAP -->
     <div class="flex justify-end">
       <Button @click="step = step + 1" variant="light" type="button"
-        >Næste trin</Button
+        >Videre</Button
       >
     </div>
   </div>
@@ -188,7 +188,7 @@ import Button from "./Button.astro";
 
     <div class="flex flex-row gap-5">
       <!-- e-mail -->
-      <div class="flex flex-col w-41.25 lg:w-46 pb-xl">
+      <div class="flex flex-col w-37.5 lg:w-46 pb-xl">
         <label for="email"
           ><Text
             teksttype="formtekst"
@@ -204,7 +204,7 @@ import Button from "./Button.astro";
       </div>
 
       <!-- mobilnummer -->
-      <div class="flex flex-col w-41.25 lg:w-46">
+      <div class="flex flex-col w-37.5 lg:w-46">
         <label for="mobilnummer"
           ><Text
             teksttype="formtekst"
